--- a/views/backend/loisir_add_form.html.twig
+++ b/views/backend/loisir_add_form.html.twig
@@ -1,5 +1,7 @@
 {% extends 'views/layout.html.twig' %}
-
+{% block meta %}
+    <title>Administration</title>
+{% endblock %}
 {% block title %}{{ title }}{% endblock %}
 
 {% block content %}
@@ -146,7 +148,7 @@
         </div>
         <div class="form-group">
             <div class="col-sm-offset-4 col-sm-3">
-                <input type="submit" id="pac-input" class="btn btn-primary" value="Save"/>
+                <input type="submit" id="pac-input" class="btn btn-primary" value="Ajouter"/>
             </div>
         </div>
     </div>
