--- a/views/backend/loisir_form.html.twig
+++ b/views/backend/loisir_form.html.twig
@@ -1,6 +1,8 @@
 {% extends 'views//layout.html.twig' %}
 {% set adminMenu = true %}
-
+{% block meta %}
+    <title>Administration</title>
+{% endblock %}
 {% block title %}{{ title }}{% endblock %}
 
 {% block content %}
