--- a/views/backend/user_form.html.twig
+++ b/views/backend/user_form.html.twig
@@ -1,5 +1,7 @@
 {% extends 'views/layout.html.twig' %}
-
+{% block meta %}
+    <title>Administration</title>
+{% endblock %}
 {% block title %}{{ title }}{% endblock %}
 
 {% block content %}
