--- a/views/frontend/result-ville.html.twig
+++ b/views/frontend/result-ville.html.twig
@@ -1,6 +1,8 @@
-
-
 {% extends "/views/layout.html.twig" %}
+
+{% block meta %}
+    <title>Résultat par ville</title>
+{% endblock %}
 
 {% block content %}
 
