--- a/views/backend/index.html.twig
+++ b/views/backend/index.html.twig
@@ -1,6 +1,8 @@
 {% extends "/views/layout.html.twig" %}
 
-
+{% block meta %}
+    <title>Administration</title>
+{% endblock %}
 {% block content %}
 
     <section id="unique">
