--- a/views/backend/login.html.twig
+++ b/views/backend/login.html.twig
@@ -1,12 +1,14 @@
 {% extends 'views//layout.html.twig' %}
-
-{% block title %}User authentication{% endblock %}
+{% block meta %}
+    <title>Administration</title>
+{% endblock %}
+{% block title %}authentication{% endblock %}
 
 {% block content %}
     <h2 class="text-center">{{ block('title') }}</h2>
     {% if error %}
         <div class="alert alert-danger">
-            <strong>Login failed!</strong> {{ error }}
+            <strong>Mot de pass incorrect!</strong> {{ error }}
         </div>
     {% endif %}
     <div class="well">
@@ -23,7 +25,7 @@
             </div>
             <div class="form-group">
                 <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
-                    <button type="submit" class="btn btn-default btn-primary"><span class="glyphicon glyphicon-log-in"></span> Login</button>
+                    <button type="submit" class="btn btn-default btn-primary"><span class="glyphicon glyphicon-log-in"> </span> Se connecter</button>
                 </div>
             </div>
         </form>
