--- a/views/frontend/geoloc.html.twig
+++ b/views/frontend/geoloc.html.twig
@@ -1,6 +1,9 @@
 
 {% extends "/views/layout.html.twig" %}
 
+{% block meta %}
+    <title>Résultat loisirs</title>
+{% endblock %}
 
 {% block content %}
 
