--- a/views/frontend/liste.html.twig
+++ b/views/frontend/liste.html.twig
@@ -1,6 +1,8 @@
 
 {% extends "/views/layout.html.twig" %}
-
+{% block meta %}
+    <title>Liste des loisirs</title>
+{% endblock %}
 {% block content %}
 
     {% for loisirs in loisir %}
@@ -14,7 +16,10 @@
             <P>{{ loisirs.title }} <br /> {{ loisirs.content }}</P>
             <p>Distance {{ loisirs.distance }} Mètres</p>
             <a class="articleTitle" href="{{ path('sejours/', { 'id': loisirs.id }) }}?positionL={{ loisirs.positionLat }}&positionN={{ loisirs.positionLng }}#map"><P class="fa-min"><i class="fa fa-map-marker fa-min" aria-hidden="true"></i> Plans</P>
-                <P class="prix">{{ loisirs.prix|replace({0: "GRATUIT"}) }}</P>
+                {% if loisirs.prix == 0 %}
+                {% else %}
+                    <p class="prix-unique"> Prix {{ loisirs.prix }}€</p>
+                {% endif %}
             </a>
         </div>
 
