--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -9,14 +9,13 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico"/>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <div id="haut"></div>
 <div id="menu-header">
     <h1>
-        <a id="blue-menu5" class="title" href="#slide">
-           Loisirs et Vacances
-        </a>
+        <a id="blue-menu5" class="title" href="/">Loisirs et Vacances</a>
     </h1>
     <nav>
 
@@ -24,30 +23,57 @@
 
         <ul id="deroul-menu">
             <li><a id="blue-menu" href="/"> Accueil </a></li>
-            <li><a id="blue-menu2"  href="/geoloc"> Idée loisirs </a></li>
-            <li><a id="blue-menu3"  href="/contact"> Contact </a></li>
-            <li><a id="blue-menu4"  href=""> Aide </a></li>
-            {% if app.user and is_granted('ROLE_ADMIN') %}
-            <li><a id="blue-menu4"  href="/admin"> Administration </a></li>
-            {% else %}
-            <li><a id="blue-menu4"  href="/user/add"> Inscription </a></li>
-            {% endif %}
+            <li><a id="blue-menu2" href="/geoloc"> Idée loisirs </a></li>
+            <li><a id="blue-menu3" href="/contact"> Contact </a></li>
 
-            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-            <li><a id="blue-menu4"  href="/loisir/add"> Proposer une activiter </a></li>
-            {% endif %}
         </ul>
+        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+
+            <div class="btn-group">
+                <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+
+                    Bienvenue, {{ app.user.username }}
+
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu">
+
+                    {% if app.user and is_granted('ROLE_ADMIN') %}
+                        <li><a class="white" href="/admin"> Administration </a></li>
+                    {% else %}
+                        <li><a class="white" href="/user/add"> Inscription </a></li>
+                    {% endif %}
+
+                    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                        <li><a class="white" href="/loisir/add"> Ajouter une activité </a></li>
+                        <li><a href="{{ path('logout') }}">Se déconnecter</a></li>
+                    {% endif %}
+
+                </ul>
+            </div>
+
+        {% else %}
+            <a class="connect" href="/login"> Proposer une activité </a>
+            <a class="connect" href="/login"> Connexion </a>
+        {% endif %}
     </nav>
 </div>
 
-
 {% block content %}{% endblock %}
 
-
 <section id="footer">
-    <div class="texte-footer"><h2>Remerciement</h2><p>Site web réaliser avec l'aide <a href="https://openclassrooms.com/referral/lamlaam" class="white" title="Formation de professionnelle en ligne"> d'OpenClassrooms </a></p> <p> Grâce à OpenClassroom j'ai pu réaliser mon rêve, de devenir développeur d'applications web.</p> </div>
-    <div class="texte-footer"><h2>Professionnels</h2>  <p> <a href="" class="white">Affiliation<i class="fa fa-angle-double-right fa-moyen" aria-hidden="true"></i></a></p> <p> <a href="" class="white">Partenaires<i class="fa fa-angle-double-right fa-moyen" aria-hidden="true"></i></a></p> </div>
-    <div class="texte-footer"><h2>En savoir plus </h2> <p></p> <p> <a href="" class="white">Qui sommes-nous ? <i class="fa fa-angle-double-right fa-moyen" aria-hidden="true"></i></a></p> </div>
+    <div class="texte-footer"><h2>Remerciement</h2>
+        <p>Site web réaliser avec l'aide <a href="https://openclassrooms.com/referral/lamlaam" class="white"
+                                            title="Formation de professionnelle en ligne"> d'OpenClassrooms </a></p>
+        <p> Grâce à OpenClassroom j'ai pu réaliser mon rêve, de devenir développeur d'applications web.</p></div>
+    <div class="texte-footer"><h2>Professionnels</h2>
+        <p><a href="" class="white">Affiliation<i class="fa fa-angle-double-right fa-moyen" aria-hidden="true"></i></a>
+        </p>
+        <p><a href="" class="white">Partenaires<i class="fa fa-angle-double-right fa-moyen" aria-hidden="true"></i></a>
+        </p></div>
+    <div class="texte-footer"><h2>En savoir plus </h2>
+        <p></p>
+        <p><a href="" class="white">Qui sommes-nous ? <i class="fa fa-angle-double-right fa-moyen" aria-hidden="true"></i></a></p></div>
 
     <div class="texte-footer"><h2>Suivez nous </h2>
         <p>
@@ -57,16 +83,17 @@
         </p>
     </div>
     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-        <span class="glyphicon glyphicon-user"></span> Welcome, {{ app.user.username }} <b class="caret"></b><a href="{{ path('logout') }}">Log out</a>
+        <span class="glyphicon glyphicon-user"></span> Welcome, {{ app.user.username }} <b class="caret"></b><a
+            href="{{ path('logout') }}">Log out</a>
     {% else %}
         <a href="{{ path('login') }}">Log in</a>
     {% endif %}
     {% if app.user and is_granted('ROLE_ADMIN') %}
         <a href="{{ path('admin') }}"><span class="glyphicon glyphicon-cog"></span> Administration</a>
     {% endif %}
-    <div id="copyright"> copyright 2018 cadito.fr | <a href="https://www.progfacil.com/condition.html" target="_blank" class="white">Mention légales</a> </div>
+    <div id="copyright"> copyright 2018 cadito.fr | <a href="https://www.progfacil.com/condition.html" target="_blank" class="white">Mention légales</a></div>
 </section>
-</div>
+
 <div class="scroll-top-wrapper ">
     <a href="#haut">
         <span class="scroll-top-inner">
